@@ -1,3 +1,8 @@
+mkdocs-material-3.2.0 (2018-12-28)
+
+  * Added support for redirects using metadata refresh
+  * Fixed #921: Load Google Analytics snippet asynchronously
+
 mkdocs-material-3.1.0 (2018-11-17)
 
   * Added support for Progressive Web App Manifest
